--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
     "@rsuite/icons": "^1.0.2",
-    "axios": "^0.23.0",
     "apexcharts": "^3.29.0",
+    "axios": "^0.23.0",
     "jwt-decode": "^3.1.2",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-countup": "^6.0.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.5",
