--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@rsuite/icons": "^1.0.2",
     "apexcharts": "^3.29.0",
     "axios": "^0.23.0",
+    "google-map-react": "^2.1.10",
     "jwt-decode": "^3.1.2",
     "next": "11.1.2",
     "react": "17.0.2",
