--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-countup": "^6.0.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-multi-carousel": "^2.6.5",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "redux": "^4.1.1",
