--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apexcharts": "^3.29.0",
     "axios": "^0.23.0",
     "google-map-react": "^2.1.10",
+    "google-maps-react": "^2.0.6",
     "jwt-decode": "^3.1.2",
     "next": "11.1.2",
     "react": "17.0.2",
