--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "react-multi-carousel": "^2.6.5",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
+    "react-slick": "^0.28.1",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
-    "rsuite": "^5.0.2"
+    "rsuite": "^5.0.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "eslint": "8.0.1",
