--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "@rsuite/icons": "^1.0.2",
     "apexcharts": "^3.29.0",
     "axios": "^0.23.0",
+    "dayjs": "^1.10.7",
     "google-map-react": "^2.1.10",
     "google-maps-react": "^2.0.6",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-countup": "^6.0.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-moment": "^1.1.1",
     "react-multi-carousel": "^2.6.5",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
