--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-countup": "^6.0.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-loadingg": "^1.7.2",
     "react-moment": "^1.1.1",
     "react-multi-carousel": "^2.6.5",
     "react-redux": "^7.2.5",
