--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "apexcharts": "^3.29.0",
     "axios": "^0.23.0",
     "dayjs": "^1.10.7",
+    "follow-redirects": "^1.14.7",
     "google-map-react": "^2.1.10",
     "google-maps-react": "^2.0.6",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "next": "^12.0.8",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-countup": "^6.0.0",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-loadingg": "^1.7.2",
     "react-moment": "^1.1.1",
