--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
+    "@react-google-maps/api": "^2.7.0",
     "@rsuite/icons": "^1.0.2",
     "apexcharts": "^3.29.0",
     "axios": "^0.23.0",
@@ -23,10 +24,12 @@
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "next": "^11.1.3",
+    "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-countup": "^6.0.0",
     "react-dom": "^17.0.2",
+    "react-google-maps": "^9.4.5",
     "react-icons": "^4.3.1",
     "react-loadingg": "^1.7.2",
     "react-moment": "^1.1.1",
